...
			</Button>
			<Button
				textColor={colors.onBackground}
				style={[dynamicStyles.link, styles.link]}
				icon="logout"
				onPress={onLogout}
				testID="sign-out-button"
			>
				<Text>Sign out</Text>
			</Button>
			{__DEV__ && (
				<>
					<View
...
