...
					<WWButton
						mode="outlined"
						onPress={onArchive}
						disabled={isUpdating}
						textColor={theme.colors.error}
						style={styles.archiveButton}
						testID="archive-button"
					>
						<Text>Archive project</Text>
					</WWButton>
				</View>
			</View>
		</WWScreenView>
...
